--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "gifsplit",
   "version": "1.0.0",
   "description": "Utility to split gifs into frames",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
